pubsub client/force-app/main/default/objects/Einstein_Chat_Response__e/Einstein_Chat_Response__e.object-meta.xml
<CustomObject>
    <label>Einstein Chat Response</label>
    <pluralLabel>Einstein Chat Responses</pluralLabel>
</CustomObject>