pubsub client/force-app/main/default/objects/Einstein_Chat_Response__e/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <description>Correlation ID matching the originating request. LWC filters its subscription on this.</description>
    <label>Conversation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>