pubsub client/force-app/main/default/objects/Einstein_Chat_Response__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Human-readable error detail when Status__c = "error".</description>
    <label>Error Message</label>
    <length>1024</length>
    <type>Text</type>
</CustomField>