pubsub client/force-app/main/default/objects/Einstein_Chat_Response__e/fields/Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Payload_Json__c</fullName>
    <description>Structured JSON payload. For chat mode: {"replyText":"...","updatedHistory":[...]}. For agents mode: {"responses":[{"agentName","answer"}...],"suggestions":[...],"updatedHistory":[...]}.</description>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>