pubsub client/force-app/main/default/objects/Einstein_Chat_Response__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>"ok" for a successful response, "error" if the subscriber could not process the request.</description>
    <label>Status</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>